[package]
name = "gettid"
version = "0.1.3"
authors = ["Josh Gao <josh@jmgao.dev>", "Trevor Gross <tmgross@umich.edu>"]
edition = "2018"

description = "Helper to get an integer ID for the current thread"
repository = "https://github.com/jmgao/gettid"
keywords = ["gettid", "pthread"]
license = "0BSD"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
